2006-12-05  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/ImageView.java
	(ImageView): Initialize spans array here.
	(setPropertiesFromAttributes): Moved init of spans array to
	constructor.

2006-12-05  Roman Kennke  <kennke@aicas.com>

	* NEWS: Add entry about improved HTML support.

2006-12-05  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/ImageView.java
	(imageUpdate): Use spans field to determine if the CSS width/height
	are set. Call safePreferenceChanged to protect view structure
	from threading issues.
	(spans): Made package private.
	(ImageView): Initialize loadOnDemand with false.
	(loadImage): Call Toolkit.prepareImage() to make sure we have
	our Observer registered.
	(safePreferenceChanged): New helper method. Calls preferenceChanged
	in a thread safe environment.

2006-12-05  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/AsyncImage.java: New class. Supports
	asynchronous loading of images.
	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(drawImage): Fetch real image from possibly AsyncImage.
	* gnu/java/awt/peer/gtk/ComponentGraphics.java
	(drawImage): Fetch real image from possibly AsyncImage.
	* gnu/java/awt/peer/gtk/GtkToolkit.java
	(createImage(URL)): Create async image.
	(imageOrError): Made method static for easy access from AsyncImage.
	(prepareImage): For async images, register the observer to the
	image.

2006-12-05  Roman Kennke  <kennke@aicas.com>

	(paintComponent): Include paint area from event.
	(updateComponent): Include paint area from event.

2006-12-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* java/awt/Component.java (getFontImpl): Return a default font if
	topmost parent's font is null.

2006-12-04  Robert Lougher  <rob.lougher@gmail.com>

	* java/lang/management/ThreadInfo.java (ThreadInfo): Check
	whether given a null lock and lockOwner.
	(getLockName): Switch condition.
	(getLockOwnerId): Likewise.
	(getLockOwnerName): Likewise.

2006-12-04  Mark Wielaard  <mark@klomp.org>
